--- a/templates/subcategory.html
+++ b/templates/subcategory.html
@@ -27,8 +27,10 @@
         {% for subcategory in subcategories %}
             <div class="subcategory">
                
-                
-                <a href="/products/{{ subcategory.id }}">{{ subcategory.name }}</a>
+                <a href="/products_list_page/{{ subcategory.id }}">{{ subcategory.name }}</a>
+
+                <!-- <a href="/subcategory/{{ category.id }}/products/{{ subcategory.id }}">{{ subcategory.name }}</a> -->
+                <!-- <a href="/products_list_page/{{ subcategory.id }}">{{ subcategory.name }}</a> -->
 
                 <div class="sub-image">
 
