--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -15,10 +15,11 @@
         <h2>Products in {{ subcategory.name }}</h2>
     </header>
    
-    
+    <a href="/create-product/{{ subcategory.id }}">Create product</a>
     
     {% if products %}
         <div class="product-list">
+            
             {% for product in products %}
                 <div class="product-item">
                     <h2>{{ product.product_name }}</h2>
@@ -50,44 +51,3 @@
 </body>
 </html>
 
-<!-- {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'static.css' %}">
-    <title>Products in {{ subcategory.name }}</title>
-</head>
-<body>
-
-    <header>
-        <h2>Products in {{ subcategory.name }}</h2>
-    </header>
-
-    
-    
-       
-            <a href="/create-product/{{ subcategory.id }}/">Create</a>
-        
-    
-
-    <div class="product-list">
-        {% for product in products %}
-            <div class="product-item">
-                <h3>{{ product.product_name }}</h3>
-                <p>Price: ${{ product.product_price }}</p>
-                <div class="product-image">
-                    {% for image in product.images.all %}
-                    <img src="{{ image.image.url }}" alt="Image for {{ product.product_name }}" width="100">
-                   {% endfor %}
-                </div>
-               
-            </div>
-        {% empty %}
-            <p>No products available in this subcategory.</p>
-        {% endfor %}
-    </div>
-
-</body>
-</html> -->
