--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                 <a href="/login/">Login</a>
             {% endif %}
             
-            <form action="/search/" method="get" class="search-form">
+            <form action="/search/" method="GET" class="search-form">
                 <input type="text" name="q" placeholder="Search products or categories" class="search-input">
                 <button type="submit" class="search-button">Search</button>               
             </form>
