--- a/templates/profile.html
+++ b/templates/profile.html
@@ -101,7 +101,7 @@
             background-color: #45a049;
         } 
 
-        /* @media screen and (max-width: 768px) {
+        @media screen and (max-width: 768px) {
             body {
                 padding: 20px;
             }
