--- a/templates/createuser.html
+++ b/templates/createuser.html
@@ -6,9 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'styles.css' %}"> 
-</head>
-
+    <link rel="stylesheet" href="{% static 'static.css' %}">
+    
 <body>
     <form method="POST" action="" enctype="multipart/form-data">
 
