--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -62,7 +62,7 @@
 
         .image-gallery {
             display: grid;
-            grid-template-columns: repeat(2, 1fr); /* Exactly 2 items per row */
+            grid-template-columns: repeat(2, 1fr); 
             gap: 20px;
             margin-top: 20px;
         }
@@ -156,7 +156,7 @@
             }
 
             .main-image {
-                height: 400px;  /* Reduced for mobile */
+                height: 400px; 
             }
 
             .product-price {
@@ -169,7 +169,7 @@
 
             .thumbnail {
                 width: 80px;
-                height: 80px; /* Reduced height for mobile */
+                height: 80px; 
             }
         }
     </style>
@@ -204,7 +204,7 @@
                         {% if is_in_cart %}
                             <a href="/cart/" class="add-to-cart-button">View Cart</a>
                         {% else %}
-                            <!-- Form to select quantity and add to cart -->
+                          
                             <form method="POST" action="/add_to_cart/{{ product.id }}/">
                                 {% csrf_token %}
                                 <label for="quantity">Quantity:</label>
@@ -217,7 +217,7 @@
             </div>
         </div>
 
-        <a href="/products_list_page/{{ subcategory.id }}" class="back-link">Back to Product List</a>
+        <a href="/" class="back-link">Homepage</a>
     </div>
 
 </body>
