--- a/app/static/static.css
+++ b/app/static/static.css
@@ -328,3 +328,44 @@ p {
 }
 
 
+/* Pagination Styles */
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.pagination a {
+    margin: 0 10px;
+    padding: 10px 15px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: background-color 0.3s;
+}
+
+.pagination a:hover {
+    background-color: #0056b3;
+}
+
+.pagination a[disabled] {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.pagination a:first-child {
+    margin-left: 0;
+}
+
+.pagination a:last-child {
+    margin-right: 0;
+}
+
+.pagination .current-page {
+    font-weight: bold;
+    background-color: #28a745;
+    color: white;
+}
